test/Constraints/invalid_stdlib_2.code
// RUN: %target-typecheck-verify-language

class Dictionary<K, V> : ExpressibleByDictionaryLiteral { // expected-error {{type 'Dictionary<K, V>' does not conform to protocol 'ExpressibleByDictionaryLiteral'}}  expected-note {{add stubs for conformance}}
  typealias Key = K
  typealias Value = V
  init(dictionaryLiteral xs: K...){} // expected-note {{candidate has non-matching type '(dictionaryLiteral: K...)'}}
}

fn useDict<K, V>(_ d: Dictionary<K,V>) {}

useDict(["Hello" : 1])
useDict(["Hello" : 1, "World" : 2])

